# WillowVox-Project-Template

./: .gitignore  CMakeLists.txt  CMakeSettings.json
WillowVoxEngine/include/WillowVox/events/: EventDispatcher.h
WillowVoxEngine/include/WillowVox/world/: NoiseWorldGen.h  SurfaceFeature.h
WillowVoxEngine/lib/debug/: WillowVoxEngine.lib
WillowVoxEngine/lib/release/: WillowVoxEngine.lib
assets/shaders/post-processing/: framebuffer_frag.glsl
include/: TemplateWorld.h
src/: main.cpp
